manifests/cluster/envoy-gateway/gatewayclass.yaml
---
apiVersion: "gateway.networking.k8s.io/v1"
kind: "GatewayClass"
metadata:
  name: "envoy-gateway"
  namespace: "envoy-gateway-system"
spec:
  controllerName: "gateway.envoyproxy.io/gatewayclass-controller"
