manifests/cluster/envoy-gateway/namespace.yaml
---
apiVersion: "v1"
kind: "Namespace"
metadata:
  name: "envoy-gateway-system"
