manifests/cluster/envoy-gateway/gateway.yaml
---
apiVersion: "gateway.networking.k8s.io/v1"
kind: "Gateway"
metadata:
  name: "envoy-gateway"
  namespace: "envoy-gateway-system"
spec:
  gatewayClassName: "envoy"
  infrastructure:
    parametersRef:
      group: "gateway.envoyproxy.io"
      kind: "EnvoyProxy"
      name: "envoy-proxy"
  addresses:
    - type: "IPAddress"
      value: "192.168.1.99"
  listeners:
    - name: "http"
      port: 80
      protocol: "HTTP"
      allowedRoutes:
        namespaces:
          from: "All"

    - name: "skar.io"
      port: 80
      protocol: "HTTP"
      hostname: "*.skar.io"
      allowedRoutes:
        namespaces:
          from: "All"

    - name: "selfsigned"
      port: 443
      protocol: "HTTPS"
      hostname: "192.168.1.99"
      allowedRoutes:
        namespaces:
          from: "All"
      tls:
        mode: "Terminate"
        certificateRefs:
          - group: ""
            kind: "Secret"
            name: "envoy-gateway-selfsigned-cert"

    - name: "postgres"
      port: 5432
      protocol: "TCP"
      allowedRoutes:
        namespaces:
          from: "All"
