manifests/cluster/envoy-gateway/gateways.yaml
---
apiVersion: "gateway.networking.k8s.io/v1"
kind: "Gateway"
metadata:
  name: "private"
  namespace: "envoy-gateway-system"
  annotations:
    cert-manager.io/cluster-issuer: "ca-issuer"
spec:
  gatewayClassName: "private-envoy-gateway"
  infrastructure:
    parametersRef:
      group: "gateway.envoyproxy.io"
      kind: "EnvoyProxy"
      name: "private"
  listeners:
    - name: "http"
      port: 80
      protocol: "HTTP"
      allowedRoutes:
        namespaces:
          from: "All"
    - name: "https"
      hostname: "192.168.1.99"
      port: 443
      protocol: "HTTPS"
      allowedRoutes:
        namespaces:
          from: "All"
      tls:
        mode: "Terminate"
        certificateRefs:
          - name: "private-gateway-cert"
  addresses:
    - type: "IPAddress"
      value: "192.168.1.99"
---
apiVersion: "gateway.networking.k8s.io/v1"
kind: "Gateway"
metadata:
  name: "public"
  namespace: "envoy-gateway-system"
spec:
  gatewayClassName: "public-envoy-gateway"
  infrastructure:
    parametersRef:
      group: "gateway.envoyproxy.io"
      kind: "EnvoyProxy"
      name: "public"
  listeners:
    - name: "http"
      port: 80
      protocol: "HTTP"
      allowedRoutes:
        namespaces:
          from: "All"
    - name: "tls"
      port: 6443
      protocol: "TLS"
      allowedRoutes:
        namespaces:
          from: "All"
      tls:
        mode: "Passthrough"
  addresses:
    - type: "IPAddress"
      value: "192.168.1.98"
